# data-cleaning-openenv

./: Dockerfile  README.md  app.py  generate_data.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
data/cleaned_ground_truth/: easy_clean.csv  hard_clean.csv  medium_clean.csv
data/raw/: easy.csv  hard.csv  medium.csv
env/: environment.py  models.py  reward.py  state_manager.py
server/: app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
