[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "A real-world OpenEnv simulation for data cleaning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "openai",
    "openenv-core",
    "python-dotenv",
    "uvicorn"
]