[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data-cleaning"
version = "0.1.0"
description = "Data Cleaning environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
# Enables: uv run --project . server
server = "data_cleaning.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["data_cleaning", "data_cleaning.server"]
package-dir = { "data_cleaning" = ".", "data_cleaning.server" = "server" }